--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       body {
         margin: 0;
-        background-color: paleturquoise;
+        background-color: floralwhite;
       }
 
       .container {
