--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       body {
         margin: 0;
-        background-color: floralwhite;
+        background-color: paleturquoise;
       }
 
       .container {
@@ -21,14 +21,15 @@
         left: 0;
         right: 0;
         margin-inline: auto;
-        will-change: transform;
 
         width: 400px;
         height: 710px;
 
-        transition: transform var(--duration-close) var(--easing);
+        transition: scale var(--duration-close) var(--easing),
+          border-radius calc(var(--duration-close) * 2 / 3) var(--easing)
+            calc(var(--duration-close) / 3);
         transform-origin: center bottom;
-        transform: scale(calc(80 / 400), calc(80 / 710));
+        scale: calc(80 / 400) calc(80 / 710);
 
         background-color: white;
         border-radius: 50%;
@@ -36,7 +37,7 @@
       }
 
       .container > .closed {
-        transform: scale(calc(400 / 80), calc(710 / 80));
+        scale: calc(400 / 80) calc(710 / 80);
       }
 
       .container > .closed,
@@ -49,9 +50,10 @@
       }
 
       .container.is-open {
-        transition: transform var(--duration-open) var(--easing);
+        transition: scale var(--duration-open) var(--easing),
+          border-radius var(--duration-open) var(--easing);
 
-        transform: scale(1, 1);
+        scale: 1 1;
         border-radius: 10px;
       }
 
@@ -61,32 +63,34 @@
       .container.is-open .closed {
         opacity: 0;
         visibility: hidden;
-        will-change: opacity;
       }
 
       .container:not(.is-open) .closed,
       .container.is-open .open {
         opacity: 1;
         visibility: visible;
-        will-change: opacity;
       }
 
       .container:not(.is-open) .closed {
         transition: opacity calc(var(--duration-open) * 2 / 3) var(--easing)
-          calc(var(--duration-open) / 3);
+            calc(var(--duration-open) / 3),
+          visibility 0ms var(--easing) calc(var(--duration-open) / 3);
       }
 
       .container:not(.is-open) .open {
-        transition: opacity calc(var(--duration-open) / 3) var(--easing);
+        transition: opacity calc(var(--duration-open) / 3) var(--easing),
+          visibility 0ms var(--easing) calc(var(--duration-open) / 3);
       }
 
       .container.is-open .open {
         transition: opacity calc(var(--duration-close) * 2 / 3) var(--easing)
-          calc(var(--duration-close) / 3);
+            calc(var(--duration-close) / 3),
+          visibility 0ms var(--easing) calc(var(--duration-close) / 3);
       }
 
       .container.is-open .closed {
-        transition: opacity calc(var(--duration-close) / 3) var(--easing);
+        transition: opacity calc(var(--duration-close) / 3) var(--easing),
+          visibility 0ms var(--easing) calc(var(--duration-close) / 3);
       }
 
       /* Closed state styles */
